# coursework_4

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: abstract_hh.py  abstract_json.py  config.py  json_work.py  requests_hh.py  vacancy.py
tests/: test_json_work.py  test_requests_hh.py  test_vacancy.py
